# fastapi_production_template

./: docker-compose.yml  pyproject.toml
src/: config.py  database.py  main.py  models.py  utils.py
src/routers/: auth.py
