[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "zhanymkanov"},
]
license = {text = "UNLICENSED"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "fastapi<1.0.0,>=0.111.0",
    "alembic<2.0.0,>=1.13.1",
    "psycopg2-binary<3.0.0,>=2.9.9",
    "httpx<1.0.0,>=0.27.0",
    "pydantic[email]<3.0.0,>=2.7.4",
    "pydantic-settings<3.0.0,>=2.3.2",
    "asyncpg<1.0.0,>=0.29.0",
    "uvicorn[standard]<1.0.0,>=0.30.1",
    "sentry-sdk<3.0.0,>=2.5.1",
    "sqlalchemy[asyncio]<3.0.0,>=2.0.30",
    "sqlmodel>=0.0.22",
]
name = "fastapi-template"
version = "0.1.0"
description = "A template for kickstarting new FastAPI projects"
readme = "README.md"

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.4.8",
]
prod = [
    "gunicorn<23.0.0,>=22.0.0",
    "python-json-logger<3.0.0,>=2.0.7",
    "prometheus-client<1.0.0,>=0.20.0",
]
